--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <p>status</p>
     <p>add</p>
     <p>commit</p>
+    <p>git push origin main</p>
+    <p>git init</p>
+    <p>git remote add origin + 'link'</p>
+    <p>git branch</p>
+    <p>git branch -M "name"</p>
+    <p>git checkout branchchange</p>
+    <p>git checkout -b branchname</p>
+    <p>git branch -d branchname</p>
 </body>
 
 </html>
